# toggl-cli-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs  toggl_client.rs  toggl_types.rs
