[package]
name = "toggl-cli-rs"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
log = "0.4"
env_logger = "0.8"
time = { version = "0.3.5", features = ["local-offset"] }
chrono = "0.4.38"
bytes = "1.10.1"
